NXP-30997: Export/open needed module for report computation